# Wine-Prediction-Model

./: hello.py  pyproject.toml
.dvc/: config
data/: wine_sample.csv.dvc
