[project]
name = "wine-prediction-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc[s3]>=3.65.0",
    "joblib>=1.5.3",
    "mlflow>=3.8.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
]
